# uv-development-toggle

./: .copier-answers.yml  CHANGELOG.md  Justfile  README.md  commands.md  copier.yml  docker-compose.yml  pyproject.toml  readme.md  script.py
.copier/: update.sh
.github/workflows/: build_and_publish.yml  build_and_publish_text_matrix.yml  repo-sync.yml
tests/: test_get_pypi_homepage.py  test_import.py  test_toggle.py
uv_development_toggle/: __init__.py  git_utils.py  pypi.py  status.py
