[project]
name = "uv-development-toggle"
version = "0.1.0"
description = ""
keywords = []
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
urls = { "Repository" = "https://github.com/iloveitaly/uv-development-toggle" }

# additional packaging information: https://packaging.python.org/en/latest/specifications/core-metadata/#license
[project.scripts]
uv-development-toggle = "uv_development_toggle:main"

# https://github.com/astral-sh/uv/issues/5200
[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.3"]
