[project]
name = "uv-development-toggle"
version = "0.6.3"
description = "Easily toggle between development and production packages with uv. Quickly close development packages locally."
keywords = ["uv", "development", "package"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "tomlkit>=0.13.2",
]
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
urls = { "Repository" = "https://github.com/iloveitaly/uv-development-toggle" }

# additional packaging information: https://packaging.python.org/en/latest/specifications/core-metadata/#license
[project.scripts]
uv-development-toggle = "uv_development_toggle:cli"

[build-system]
requires = ["uv_build>=0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pyright[nodejs]>=1.1.408",
    "ruff>=0.15.0",
    "coverage>=7.13.4",
    "pytest-cov>=7.0.0",
    "covdefaults>=2.3.0",
]

[tool.pyright]
exclude = ["examples/", "playground/", "tmp/", ".venv/", "tests/"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --cov-report=html:tmp/htmlcov"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["uv_development_toggle"]

[tool.coverage.report]
fail_under = 50

[tool.ruff]
extend-exclude = ["playground.py", "playground/"]
